# gnotes

./: Cargo.toml  README.md
src/: common.rs  config.rs  lib.rs  main.rs  run.rs
src/commands/: add.rs  append.rs  clone.rs  edit.rs  list.rs  mod.rs  new.rs  remove.rs  save.rs  search.rs  show.rs  tag.rs  tags_common.rs  untag.rs
src/common/: format.rs  git.rs  mod.rs  notes.rs  tags.rs  writers.rs
tests/: add_note_test.rs  add_test.rs  append_note_test.rs  clone_test.rs  common.rs  edit_note_test.rs  edit_test.rs  list_notes_test.rs  list_test.rs  new_note_test.rs  new_test.rs  remove_note_test.rs  remove_test.rs  save_test.rs  search_test.rs  setup.rs  show_note_test.rs  show_test.rs  tag_note_test.rs  tag_test.rs  untag_test.rs
tests/setup/: constants.rs  git_setup.rs  mod.rs  run_options.rs  setup.rs
