[package]
name = "gnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
dirs = "4.0.0"
edit = "0.1.0"
envy = "0.4.2"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.0"
serial_test = "0.5.1"
tempdir = "0.3.7"
