[package]
name = "gnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.0"
chrono = "0.4.19"
clap = { version = "3.0.0", features = ["derive"] }
dirs = "4.0.0"
edit = "0.1.0"
env_logger = "0.9.0"
envy = "0.4.0"
log = "0.4.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.74"
tabular = "0.1.0"
termimad = "0.20.0"
thiserror = "1.0.0"
toml = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.0"
maplit = "1.0.2"
predicates = "2.1.0"
serial_test = "0.5.0"
tempdir = "0.3.0"
